# AIOFastTelethonHelper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  python-publish.yml
aiofasttelethonhelper/: utils.py
aiofasttelethonhelper/core/: __init__.py  methods.py  senders.py  transfer.py  util.py
